[package]
name = "distributelock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3.19"
tokio = { version = "1.0", features = ["full"] }

tracing-subscriber = { version="0.3.3" , features = ["env-filter"] }

tracing = "0.1.29"

zookeeper-async = "4.1.0"

anyhow = "1.0.51"

uuid = "0.8.2"
